--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 <div class="top-bar">
         <ul class="top">
-                <li id="image"><a href="/home/index"><%= image_tag("logo.png", :alt => "Course Recommend") %></a></li>
+		<li id="image"><a href="/home/index"><%= asset_path("logo.png", :alt => "Course Recommend") %></a></li>
         </ul>
 </div>
 <div class="X"><nav>
