new background/colors

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -48,11 +48,12 @@
 
 .signin-box{
 	width: 360px;
-        background-color:#009933;
+        background-color:#240B3B;
         border-radius: 5px;
         box-shadow: 0px 1px 2px rgba(0,0,0,.25);
         padding: 20px;
         margin: 20px auto;
+	color: #FFF;
 }
 
 #login{
