--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -3,9 +3,9 @@
         width: 85px;
         height: 25px;
         border-radius: 3px;
-        color: white;
+        color: #000;
         font-size: 12px;
-        background-color: #0571a6;
+        background-color: #58D3F7;
         border-color: #045a8b;
 }
 
