--- a/app/views/penn_courses/my_recommendations.html.erb
+++ b/app/views/penn_courses/my_recommendations.html.erb
@@ -15,7 +15,7 @@
                         <li style="text-align:left; font-weight:bold">Recommendation: <%="#{recommendations.title}"%></li>
                         <li style="text-align: left">Description: <%="#{recommendations.des}"[0..500]%>.....</li>
                         <li style="text-align: left">Source: <%="#{recommendations.source}"%></li>
-                        <li style="text-align: left">Link: <%=link_to "#{recommendations.link}", "#{recommendations.link}"%></li>
+                        <li style="text-align: left">Link: <%=link_to "#{recommendations.link}", "#{recommendations.link}"%></li></br>
 			<% end %>
 			<% end %>
 		</ul>
