--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
 
 body{
        //background-color:#A9E2F3;
-        background-image: url("background4.jpg");
+        background-image: url("background.jpg");
         font-family: Helvetica, Arial, sans-serif;
         font-size: 13px;
         line-height: 17px;
@@ -22,7 +22,7 @@ body{
 }
 
 .top{
-        background-color:#009933;
+        background-color:#240B3B;
         width: 100%;
         height: 84px;
         box-shadow: 0px 0px 10px #333;
@@ -68,7 +68,7 @@ nav{
         display: inLine-block;
         text-align: center;
 	width: 70%;
-	background-color: #f0f0f0;
+	background-color: #A4A4A4;
 	border-radius: 4px 4px 4px 4px;
 }
 
@@ -85,7 +85,7 @@ nav{
 }
 
 .navbar li a{
-        color: #5d5d5d;
+        color: #000;
         display: inLine-block;
         font: 20px/1 Lobster, Arial, sans-serif;
         padding: 12px 35px 14px;
@@ -107,17 +107,18 @@ nav{
 
 .content-box{
         width: 470px;
-        background-color:#009933;
+        background-color:#240B3B;
         border-radius: 5px;
         box-shadow: 0px 1px 2px rgba(0,0,0,.25);
         padding: 20px;
         margin-left: auto;
         margin-right: auto;
+	color: #fff;
 }
 
 .devise-box{
         width: 470px;
-        background-color:#009933;
+        background-color:#240B3B;
         border-radius: 5px;
         box-shadow: 0px 1px 2px rgba(0,0,0,.25);
         padding: 20px;
@@ -125,6 +126,7 @@ nav{
         margin-right: auto;
 	margin-top: 90px;
 	text-align: center;
+	color: #fff
 }
 
 .devise-box label{
@@ -144,9 +146,9 @@ nav{
         width: 85px;
         height: 25px;
         border-radius: 3px;
-        color: white;
+        color: #000;
         font-size: 12px;
-        background-color: #0571a6;
+        background-color: #58D3F7;
         border-color: #045a8b;
 }
 
