--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -14,7 +14,7 @@
 
 body{
        //background-color:#A9E2F3;
-        background-image: url("background.jpg");
+        background-image: url(<%= asset_path "background.jpg" %>);
         font-family: Helvetica, Arial, sans-serif;
         font-size: 13px;
         line-height: 17px;
